# atomic-generic

./: .gitmodules  README.md  atomic-generic.cabal  atomic-generic.nix  default.nix  pure-xml.cabal  pure-xml.nix
src/Atomic/: FromXML.hs  ToHTML.hs  ToXML.hs
src/Pure/: FromXML.hs  ToHTML.hs  ToXML.hs
