name:                pure-xml
version:             0.6.0.0
synopsis:            Generic XML rendering and parsing utilties.
homepage:            github.com/grumply/pure-generic
license:             BSD3
license-file:        LICENSE
author:              S. M. Hickman
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Pure.ToHTML
    Pure.ToXML
    Pure.FromXML
  build-depends:
      base >=4.8
    , pure
  if (impl(ghcjs))
    cpp-options: -DGHCJS_BROWSER
  hs-source-dirs:      src
  default-language: Haskell2010