name:                pure-xml
version:             0.7.0.0
synopsis:            Generic XML rendering and parsing utilties.
homepage:            github.com/grumply/pure-xml
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Pure.ToHTML
    Pure.ToXML
    Pure.FromXML

  build-depends:
    base >= 4.8 && < 5,
    pure-core >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1


  hs-source-dirs:      src

  default-language: Haskell2010