name:                pure-xml
version:             0.8.0.0
synopsis:            Generic XML rendering and parsing utilties.
homepage:            purehs.org/doc/pure-xml
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-xml.git

library
  exposed-modules:
    Pure.ToHTML
    Pure.ToXML
    Pure.FromXML

  build-depends:
    base,
    pure-core,
    pure-txt


  hs-source-dirs:      src

  default-language: Haskell2010
